Fixed routing issues when deploying and minor visual bugs on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,9 @@
 * {
     color: #333;
 }
+
+@media (pointer: coarse) {
+    a:hover {
+        text-decoration: none !important;
+    }
+}
